--- a/web/assets/css/editorials.css
+++ b/web/assets/css/editorials.css
@@ -27,7 +27,7 @@ border-width:1px;
 /******************************************/
 #small_sponsor_bar {
   display: none;	
-  z-index: 199;
+  z-index: 99;
   position: fixed;
   top: 0px;
   width: 100%;
